k8s/convo-ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: convo-ui-lb
  namespace: convo-app
spec:
  type: LoadBalancer
  selector:
    app: convo-ui
  ports:
    - port: 80
      targetPort: 80
