k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convo-app-ingress
  namespace: convo-app
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: convo-ai-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: convo-ui-service
                port:
                  number: 80
